[tool.poetry]
name = "pytides-site"
version = "0.1.0"
description = ""
authors = ["Sahit Tuntas Sadono <26474008+sahitono@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
streamlit = "^0.84.0"
pytides2 = "^0.0.5"
plotly = "^5.1.0"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
